@@ -1,0 +1,9 @@
+##parameters=html_content
+# $Id$
+"""Return the content of the <body> tag of an HTML document.
+"""
+
+from Products.CPSDefault.utils import getHtmlBody
+
+return getHtmlBody(html_content)
+
