@@ -3,15 +3,6 @@
 """Removes the reference to an archived version if there is one present.
 """
 
-import re
+from Products.CPSDefault.utils import getNonArchivedVersionContextUrl
 
-# This regexp is for path of the following forms :
-# /cps/workspaces/cores/myDoc/view
-# /cps/workspaces/cores/myDoc/archivedRevision/1/view
-# /cps/workspaces/cores/myDoc/archivedRevision/1/archivedRevision/2/view
-#
-# Removing any matched '/archivedRevision/\d+' if present
-contentUrl = re.sub('/archivedRevision/\d+', '', content_url)
-
-return contentUrl
-
+return getNonArchivedVersionContextUrl(content_url)
