@@ -11,3 +11,5 @@ Bug fixes:
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - add bresilian language
+- compile regexps inside a utils module
+
